--- a/Budget Manager/Analyzer/task-info.yaml
+++ b/Budget Manager/Analyzer/task-info.yaml
@@ -968,9 +968,6 @@ files:
 - name: src/budget/utils/SortOption.java
   visible: true
   learner_created: true
-- name: src/budget/utils/ShowOption.java
-  visible: true
-  learner_created: true
 - name: src/budget/core/PurchaseFilter.java
   visible: true
   learner_created: true
@@ -1119,6 +1116,15 @@ files:
   visible: true
   learner_created: true
 - name: src/budget/core/sort/SortUtils.java
+  visible: true
+  learner_created: true
+- name: src/budget/core/Filter.java
+  visible: true
+  learner_created: true
+- name: src/budget/utils/PurchaseTypeChoiceItem.java
+  visible: true
+  learner_created: true
+- name: src/budget/utils/MenuItem.java
   visible: true
   learner_created: true
 feedback_link: https://hyperskill.org/learn/step/7028#comment
